# advent_of_code

./: .gitignore  day_12_rain_risk.py  day_14_docking_data.py  day_15_rambunctious_recitation.py  day_16_ticket_translation.py  day_17_conway_cubes.py  day_18_operation_order.py  day_5.py  pyproject.toml
advent_of_code/2020/: day_09_encoding_error.py  day_1.py  day_10_adapter_array.py  day_16_ticket_translation.py  day_17_conway_cubes.py  day_18_operation_order.py  day_1_report_repair.py  day_2_password_philosophy.py  day_4_passport_processing.py  day_6_custom_customs.py  day_7_handy_haversacks.py  day_8_handheld_halting.py
advent_of_code/2020/kotlin/: Day01ReportRepair.kt  Day02PasswordPhilosophy.kt
advent_of_code/2020/python/: day_03_toboggan_trajectory.py  day_11_seating_system.py  day_12_rain_risk.py  day_13_shuttle_search.py  day_14_docking_data.py  day_15_rambunctious_recitation.py
